# qwals

./: CHANGELOG.md  IMPROVEMENTS.md  LICENSE  README.md  WALS_feature_order.csv  app.py  pyproject.toml  requirements.txt
examples/: basic_usage.py
src/qwals/: __init__.py  __main__.py  _presets.py  calculator.py
src/qwals.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cache.py  test_calculator.py  test_ci.py  test_cli.py  test_explain.py  test_features.py  test_optimize.py  test_presets.py  test_suggest.py  test_viz.py
