[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwals"
version = "0.8.1"
description = "Calculate linguistic distance between languages using WALS-style feature data."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Michal Ptaszynski"}]
keywords = ["linguistics", "WALS", "typology", "distance", "language"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing :: Linguistic",
]
# Hot path is pure numpy; pandas is only needed for DataFrame outputs.
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
reports = ["pandas>=1.5"]
viz = ["matplotlib>=3.5", "scipy>=1.8"]
dev = ["pytest>=7", "pandas>=1.5", "matplotlib>=3.5", "scipy>=1.8"]

[project.urls]
Homepage = "https://github.com/your-username/qwals"
Repository = "https://github.com/your-username/qwals"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qwals = ["py.typed"]

[project.scripts]
qwals = "qwals.__main__:main"
